- Build integrated into Jenkins - Some errors deploying will occur - Attributes for module versions have been backed-out due to Git module breaking build. - Documentation updated